--- a/app/design/frontend/pc/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/view.phtml
@@ -219,3 +219,12 @@ if($result){
 <?php echo $this->getChildHtml('product_review');?>
 
 <?php echo $this->getChildHtml('askquestions');?>
+
+
+<script>
+    fbq('track', 'ViewContent', {
+        value: 3.50,
+        currency: 'USD'
+    });
+</script>
+
