--- a/app/design/frontend/pc/default/template/easycheckout/onestep.phtml
+++ b/app/design/frontend/pc/default/template/easycheckout/onestep.phtml
@@ -119,3 +119,6 @@ easycheckout.setLoadWaitingReview('saving_order');
 }
 //]]>
 </script>
+<script>
+    fbq('track', 'InitiateCheckout');
+</script>
