--- a/app/design/frontend/pc/default/template/easycheckout/onestep/payment.phtml
+++ b/app/design/frontend/pc/default/template/easycheckout/onestep/payment.phtml
@@ -33,3 +33,6 @@ var Payment_Loading_Text='<?php echo Mage::helper('easycheckout')->getEasychecko
     }
 //]]>
 </script>
+<script>
+    fbq('track', 'AddPaymentInfo');
+</script>
