--- a/app/design/frontend/pc/default/template/page/html/breadcrumbs.phtml
+++ b/app/design/frontend/pc/default/template/page/html/breadcrumbs.phtml
@@ -32,7 +32,7 @@
 
     <div class="share">
         <span>Share</span>
-        <?php if($_SERVER['HTTP_HOST'] != '127.0.0.1'):?>
+        <?php if($_SERVER['HTTP_HOST'] != 'local.islambridal.com'):?>
             <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-574c55c4ca60398e"></script>
         <?php endif;?>
         <div class="addthis_sharing_toolbox"></div>
