--- a/app/design/frontend/pc/default/template/easycheckout/onestep/review.phtml
+++ b/app/design/frontend/pc/default/template/easycheckout/onestep/review.phtml
@@ -4,12 +4,20 @@
 <div id="checkout-review-submit">  
             <p style="clear:both;"></p>
  <?php echo $this->getChildHtml('agreements') ?>
+
+<?php /*
     <?php if($news=Mage::helper('easycheckout')->getEasycheckoutConfig('general/enable_newsletter')): ?>
         <p class="easycheckout-agreement-p">  <input type="checkbox" name="is_subscribed" value="1" title="<?php echo $this->__('Sign Up for Newsletter'); ?>" class="checkbox"  id="newsletter" /><label for="newsletter"><?php echo $this->__('Sign Up for Newsletter'); ?></label></p>
     <?php endif; ?> 
+
+
    <?php if(Mage::helper('easycheckout')->getEasycheckoutConfig('quickheared/enable_quickheared')): ?>
        <?php echo $this->getChildHtml('quickheard'); ?>
-    <?php endif; ?>    
+    <?php endif; ?>  
+    
+*/?>
+
+
     <?php if(Mage::helper('easycheckout')->getEasycheckoutConfig('general/enable_comments')): ?>
        <div style="padding-bottom:10px;"><div class="easycheckout-comments-left"> <p class="easycheckout-agreement-p">
             <label for="comments"><?php echo Mage::helper('easycheckout')->getEasycheckoutConfig('general/label_comments'); ?></label><br />
