--- a/skin/frontend/pc/default/scss/_one_step_checkout.scss
+++ b/skin/frontend/pc/default/scss/_one_step_checkout.scss
@@ -115,7 +115,7 @@ div.c { clear:both; width:100%; height:0px}
 
 .easycheout_main .payment h6 {  float:left; width:100%; font:bold 12px/20px Tahoma normal; color:#434343; padding:5px 0 0px 4px; }
 
-.easycheout_main .payment label { font:12px/18px Tahoma normal; color:#474747; vertical-align:top; *vertical-align:middle !important;}
+.easycheout_main .payment label { font:12px/18px Tahoma normal; color:#474747; vertical-align:top; *vertical-align:middle !important;line-height:40px;}
 
 
 
@@ -183,10 +183,7 @@ div.c { clear:both; width:100%; height:0px}
     margin: 0 0 8px;
 }
 
-.shipping-methods dt {
-    font-weight: bold;
-    margin: 13px 0 5px;
-    }
+.shipping-methods dt {font-weight: bold;margin: 13px 0 5px;line-height: 40px;}
 .tips .tips-content {
     padding: 15px 8px 0px !important
     }
