--- a/skin/frontend/pc/default/scss/styles.css
+++ b/skin/frontend/pc/default/scss/styles.css
@@ -3152,7 +3152,7 @@ div.c { clear: both; width: 100%; height: 0px; }
 
 .easycheout_main .payment h6 { float: left; width: 100%; font: bold 12px/20px Tahoma normal; color: #434343; padding: 5px 0 0px 4px; }
 
-.easycheout_main .payment label { font: 12px/18px Tahoma normal; color: #474747; vertical-align: top; *vertical-align: middle !important; }
+.easycheout_main .payment label { font: 12px/18px Tahoma normal; color: #474747; vertical-align: top; *vertical-align: middle !important; line-height: 40px; }
 
 #jumpMenu4 { width: 180px; border: 1px solid #BFBFBF; font: 12px/18px Tahoma normal; color: #6F6F6F; padding: 1px 0 1px; }
 
@@ -3199,7 +3199,7 @@ div.c { clear: both; width: 100%; height: 0px; }
 
 .shipping-methods { margin: 0 0 8px; }
 
-.shipping-methods dt { font-weight: bold; margin: 13px 0 5px; }
+.shipping-methods dt { font-weight: bold; margin: 13px 0 5px; line-height: 40px; }
 
 .tips .tips-content { padding: 15px 8px 0px !important; }
 
