--- a/app/design/frontend/base/default/template/paypal/express/shortcut.phtml
+++ b/app/design/frontend/base/default/template/paypal/express/shortcut.phtml
@@ -4,7 +4,7 @@
 
 
 <?php /** payssion onecard **/?>
-<img src="/skin/frontend/base/default/images/payssion/onecard.png">
+    <a href="/checkout/onepage/"><img src="/skin/frontend/base/default/images/payssion/onecard.png"></a>
 <?php /** payssion onecard **/?>
 
 
