--- a/app/design/frontend/pc/default/template/page/html/footer.phtml
+++ b/app/design/frontend/pc/default/template/page/html/footer.phtml
@@ -22,6 +22,7 @@
             </dl>
         </div>
         <div class="payments">
+            <span class="payssion_onecard">payssion onecard</span>
             <span class="banks">visa, master card, maestro, carte blue</span>
             <a href="javascript:void(0);" target="_top" class="paypal">paypal</a>
             <a href="javascript:void(0);" title="wholesale Paypal Verify " class="paypalVerified">paypal verified</a>
