--- a/skin/frontend/pc/default/scss/_footer.scss
+++ b/skin/frontend/pc/default/scss/_footer.scss
@@ -121,6 +121,7 @@
         height: 30px;
         margin-top: 21px;
     }
+    .payssion_onecard{width:118.5px;height:30px;background:url(/skin/frontend/base/default/images/payssion/onecard.png) no-repeat;background-size:100%;}
 
     .banks{
         width: 222px;
