--- a/app/design/frontend/pc/default/template/helpcenter/size-chart.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/size-chart.phtml
@@ -124,4 +124,308 @@
 
     <p>All our abayas are tailored to measure, we don't stock ready made abayas we stock fabric only so we don't have any problem in making the abaya in any size, just send us your measures.</p>
 
+
+
+
+
+
+    <div class="sizeGuide tab_info">
+        <div class="size_table" id="SizeCharts">
+            <ul class="plase_selet_nav item_size_nav" id="changeSize">
+                <li class="On">
+                <a href="javascript:void(0);" style="border-radius: 5px 0 0 5px;">Inches</a><i class="arrow_bottom"></i>
+                </li>
+                <li class="">
+                <a href="javascript:void(0);" style="border-radius: 0 5px 5px 0;">Centimiters</a><i class=""></i>
+                </li>
+            </ul>
+
+            <table cellspacing="0" cellpadding="0" width="100%" border="0" class="SizeChart" style="display: table;">
+                <tbody>
+                <tr>
+                    <th style="width:16%">Measurements Size</th>
+                    <th style="width:16%" class="">Full Bust</th>
+                    <th style="width:16%" class="">Waist</th>
+                    <th style="width:16%" class="">Hips</th>
+                    <th style="width:16%" class="">Shoulder Width</th>
+                    <th style="width:16%" class="">Hollow to Floor (with heel)</th>
+                </tr>
+                <tr style="background: rgb(250, 250, 250);">
+                    <td height="30" style="line-height: 35px" class="">US 2 / UK 6 / EU 32</td>
+                    <td class="">32.75</td>
+                    <td class="">25.5</td>
+                    <td class="">35.75</td>
+                    <td class="">14.5</td>
+                    <td class="">57.75</td>
+                </tr>
+                <tr>
+                    <td height="30" style="line-height: 35px" class="">US 4 / UK 8 / EU 34</td>
+                    <td>33.5</td>
+                    <td class="">26.75</td>
+                    <td class="">36.5</td>
+                    <td class="">15</td>
+                    <td class="">57.75</td>
+                </tr>
+                <tr style="background: rgb(250, 250, 250);">
+                    <td height="30" style="line-height: 35px" class="">US 6 / UK 10 / EU 36</td>
+                    <td class="">34.75</td>
+                    <td class="">27.5</td>
+                    <td class="">37.75</td>
+                    <td class="">15</td>
+                    <td class="">59</td>
+                </tr>
+                <tr>
+                    <td height="30" style="line-height: 35px" class="">US 8 / UK 12 / EU 38</td>
+                    <td class="">35.5</td>
+                    <td class="">28.25</td>
+                    <td class="">38.5</td>
+                    <td class="">15.25</td>
+                    <td class="">59</td>
+                </tr>
+                <tr style="background: rgb(250, 250, 250);">
+                    <td height="30" style="line-height: 35px" class="">US 10 / UK 14 / EU 40</td>
+                    <td class="">36.5</td>
+                    <td class="">29.5</td>
+                    <td class="">39.75</td>
+                    <td class="">15.75</td>
+                    <td class="">59.75</td>
+                </tr>
+                <tr>
+                    <td height="30" style="line-height: 35px" class="">US 12 / UK 16 / EU 42</td>
+                    <td class="">38.25</td>
+                    <td class="">31</td>
+                    <td class="">41.25</td>
+                    <td class="">16.25</td>
+                    <td class="">59.75</td>
+                </tr>
+                <tr style="background: rgb(250, 250, 250);">
+                    <td height="30" style="line-height: 35px" class="">US 14 / UK 18 / EU 44</td>
+                    <td class="">39.25</td>
+                    <td class="">32.75</td>
+                    <td class="">43</td>
+                    <td class="">16.5</td>
+                    <td class="">61</td>
+                </tr>
+                <tr>
+                    <td height="30" style="line-height: 35px" class="">US 16 / UK 20 / EU 46</td>
+                    <td class="">41</td>
+                    <td class="">33.75</td>
+                    <td class="">44</td>
+                    <td class="">17</td>
+                    <td class="">61</td>
+                </tr>
+                <tr style="background: rgb(250, 250, 250);">
+                    <td height="30" style="line-height: 35px" class="">US 16W / UK 20 / EU 46</td>
+                    <td class="">43</td>
+                    <td class="">36.25</td>
+                    <td class="">45.75</td>
+                    <td class="">17.75</td>
+                    <td class="">61</td>
+                </tr>
+                <tr>
+                    <td height="30" style="line-height: 35px" class="">US 18W / UK 22 / EU 48</td>
+                    <td class="">45</td>
+                    <td class="">38.5</td>
+                    <td class="">47.75</td>
+                    <td class="">18</td>
+                    <td>61</td>
+                </tr>
+                <tr style="background: rgb(250, 250, 250);">
+                    <td height="30" style="line-height: 35px" class="">US 20W / UK 24 / EU 50</td>
+                    <td class="">46.75</td>
+                    <td>41</td>
+                    <td>49.5</td>
+                    <td>18.5</td>
+                    <td>61</td>
+                </tr>
+                <tr>
+                    <td height="30" style="line-height: 35px" class="">US 22W / UK 26 / EU 52</td>
+                    <td class="">48.75</td>
+                    <td>43</td>
+                    <td>51.5</td>
+                    <td>19</td>
+                    <td>61</td>
+                </tr>
+                <tr style="background: rgb(250, 250, 250);">
+                    <td height="30" style="line-height: 35px">US 24W / UK 28 / EU 54</td>
+                    <td>51.25</td>
+                    <td>45.25</td>
+                    <td>53.5</td>
+                    <td>19</td>
+                    <td>61</td>
+                </tr>
+                <tr>
+                    <td height="30" style="line-height: 35px">US 26W / UK 30 / EU 56</td>
+                    <td>53.25</td>
+                    <td>47.75</td>
+                    <td>55.5</td>
+                    <td>19.25</td>
+                    <td>61</td>
+                </tr>
+                </tbody>
+            </table>
+            
+            <table cellspacing="0" cellpadding="0" width="100%" border="0" class="SizeChart" style="display: none;">
+                <tbody>
+                <tr style="background: rgb(250, 250, 250);">
+                    <th style="width:16%">Measurements Size</th>
+                    <th style="width:16%" class="">Full Bust</th>
+                    <th style="width:16%" class="">Waist</th>
+                    <th style="width:16%" class="">Hips</th>
+                    <th style="width:16%" class="">Shoulder Width</th>
+                    <th style="width:16%" class="">Hollow to Floor (with heel)</th>
+                </tr>
+                <tr>
+                    <td height="30" style="line-height: 35px">US 2 / UK 6 / EU 32</td>
+                    <td>83</td>
+                    <td>65</td>
+                    <td>91</td>
+                    <td>37</td>
+                    <td>147</td>
+                </tr>
+                <tr style="background: rgb(250, 250, 250);">
+                    <td height="30" style="line-height: 35px" class="">US 4 / UK 8 / EU 34</td>
+                    <td class="">85</td>
+                    <td>68</td>
+                    <td>93</td>
+                    <td>38</td>
+                    <td>147</td>
+                </tr>
+                <tr>
+                    <td height="30" style="line-height: 35px" class="">US 6 / UK 10 / EU 36</td>
+                    <td class="">88</td>
+                    <td>70</td>
+                    <td>96</td>
+                    <td>38</td>
+                    <td>150</td>
+                </tr>
+                <tr style="background: rgb(250, 250, 250);">
+                    <td height="30" style="line-height: 35px" class="">US 8 / UK 12 / EU 38</td>
+                    <td class="">90</td>
+                    <td>72</td>
+                    <td>98</td>
+                    <td>39</td>
+                    <td>150</td>
+                </tr>
+                <tr>
+                    <td height="30" style="line-height: 35px" class="">US 10 / UK 14 / EU 40</td>
+                    <td class="">93</td>
+                    <td>75</td>
+                    <td class="">101</td>
+                    <td>40</td>
+                    <td>152</td>
+                </tr>
+                <tr style="background: rgb(250, 250, 250);">
+                    <td height="30" style="line-height: 35px" class="">US 12 / UK 16 / EU 42</td>
+                    <td class="">97</td>
+                    <td class="">79</td>
+                    <td class="">105</td>
+                    <td>41</td>
+                    <td class="">152</td>
+                </tr>
+                <tr>
+                    <td height="30" style="line-height: 35px" class="">US 14 / UK 18 / EU 44</td>
+                    <td class="">100</td>
+                    <td class="">83</td>
+                    <td>109</td>
+                    <td class="">42</td>
+                    <td class="">155</td>
+                </tr>
+                <tr style="background: rgb(250, 250, 250);">
+                    <td height="30" style="line-height: 35px" class="">US 16 / UK 20 / EU 46</td>
+                    <td class="">104</td>
+                    <td class="">86</td>
+                    <td class="">112</td>
+                    <td class="">43</td>
+                    <td class="">155</td>
+                </tr>
+                <tr>
+                    <td height="30" style="line-height: 35px" class="">US 16W / UK 20 / EU 46</td>
+                    <td class="">109</td>
+                    <td class="">92</td>
+                    <td>116</td>
+                    <td class="">45</td>
+                    <td>155</td>
+                </tr>
+                <tr style="background: rgb(250, 250, 250);">
+                    <td height="30" style="line-height: 35px" class="">US 18W / UK 22 / EU 48</td>
+                    <td>114</td>
+                    <td>98</td>
+                    <td>121</td>
+                    <td class="">46</td>
+                    <td>155</td>
+                </tr>
+                <tr>
+                    <td height="30" style="line-height: 35px">US 20W / UK 24 / EU 50</td>
+                    <td>119</td>
+                    <td>104</td>
+                    <td>126</td>
+                    <td>47</td>
+                    <td>155</td>
+                </tr>
+                <tr style="background: rgb(250, 250, 250);">
+                    <td height="30" style="line-height: 35px">US 22W / UK 26 / EU 52</td>
+                    <td>124</td>
+                    <td>109</td>
+                    <td>131</td>
+                    <td>48</td>
+                    <td>155</td>
+                </tr>
+                <tr>
+                    <td height="30" style="line-height: 35px">US 24W / UK 28 / EU 54</td>
+                    <td>130</td>
+                    <td>115</td>
+                    <td>136</td>
+                    <td>48</td>
+                    <td>155</td>
+                </tr>
+                <tr style="background: rgb(250, 250, 250);">
+                    <td height="30" style="line-height: 35px">US 26W / UK 30 / EU 56</td>
+                    <td>135</td>
+                    <td>121</td>
+                    <td>141</td>
+                    <td>49</td>
+                    <td>155</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <script>
+    jQuery(document).ready(function($) {
+        $("tr:even").css("background", "#fafafa");
+
+        var $changeSize = $("#changeSize");
+        $changeSize.find("li").click(function() {
+            var $this = $(this);
+            $changeSize.find(".On").removeClass("On");
+            $changeSize.find(".arrow_bottom").removeClass("arrow_bottom");
+            $this.addClass("On");
+            $this.find("i").addClass("arrow_bottom");
+            $(".SizeChart").hide().eq($this.index()).show();
+        });
+        
+
+        
+        $(".SizeChart").find("td").hover(function() {
+            var $this = $(this);
+            var index = $this.index();
+            if (index < 1) {
+                return false;
+            } else {
+                $this.addClass("bghover");
+                $this.closest("tr").find("td").eq(0).addClass("bghover");
+                $this.closest("table").find("th").eq(index).addClass("bghover");
+            }
+        }, function() {
+            var $this = $(this);
+            var index = $this.index();
+            $this.removeClass("bghover");
+            $this.closest("tr").find("td").eq(0).removeClass("bghover");
+            $this.closest("table").find("th").eq(index).removeClass("bghover");
+        });
+    });
+    </script>
+
+
 </div>
