域名替换：关键字islambridal都换成isbridal

--- a/app/design/frontend/pc/default/template/helpcenter/about-us.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/about-us.phtml
@@ -17,7 +17,7 @@
     <p>6. Delivery fast around the world</p>
 
     <p>We accept payment manners of Western Union, credit Cards, wire transfer and paypal. We have been improved by McAfee and VeriSign,  so you will be secured that your transaction is safe.</p>
-    <p>Because we aim for good feedback from our clients, we also put effort when it comes to the dresses delivery, so we have top company partners, like UPS and DHL, in transporting the items correctly and swiftly right in the front of your door. We always deliver with great service wherever you are located and whoever you are, if you need a support from us, islambridal’s customer service will be providing you the best service you could ever ask for.</p>
+    <p>Because we aim for good feedback from our clients, we also put effort when it comes to the dresses delivery, so we have top company partners, like UPS and DHL, in transporting the items correctly and swiftly right in the front of your door. We always deliver with great service wherever you are located and whoever you are, if you need a support from us, isbridal’s customer service will be providing you the best service you could ever ask for.</p>
 
 
 </div>
