--- a/app/design/frontend/pc/default/template/helpcenter/how-to-wear-hijab.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/how-to-wear-hijab.phtml
@@ -1,7 +1,7 @@
 <div class="help_right"><p><span style="font-size: medium;"><strong>Hijab Tutorial>> How to wear hijab</strong></span></p>
 
     <p>Actually, It is easy to wear the hijab with full chest coverage after you find a hijab tutorial here. Most muslim women prefer to wear the hijab with proper chest coverage. This can be done in a stylish manner. You can use different scarf styles with accessories while following the hijab fashion for 2016. Most of all, it’s essential for you to cover your chest with hijab. It is also a great style to wear if your blouse is a bit fitted and you want to hide it.</p>
-    <p>Here we show you the steps to make this style using various scarves, such as patterned dupatta and shawl. We also recommend you a YouTube video which you can easily follow to create this look in 4 ways. If you want to buy hijab wedding dresses online, have a look at islambridal website.</p>
+    <p>Here we show you the steps to make this style using various scarves, such as patterned dupatta and shawl. We also recommend you a YouTube video which you can easily follow to create this look in 4 ways. If you want to buy hijab wedding dresses online, have a look at isbridal website.</p>
 
     <p>Full Chest Coverage Tutorial</p>
     <p>http://www.hijabiworld.com/wp-content/uploads/2015/08/hijab-tutorial-cover-chest.jpg</p>
