域名替换：文件中域名替换

--- a/app/design/frontend/pc/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/view.phtml
@@ -34,7 +34,7 @@ if($result){
         <?php else:?>
             $<span itemprop="price"><?php echo $_product->getPrice();?></span>
         <?php endif;?>
-        Available from: <span itemprop="seller">Iislambridal.com</span>
+        Available from: <span itemprop="seller">Isbridals.com</span>
         <?php if($_product->getIsInStock()):?>
             <link itemprop="availability" href="http://schema.org/InStock"/>In stock! Order now!
         <?php endif;?>
