--- a/app/design/frontend/pc/default/template/helpcenter/cancel-order.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/cancel-order.phtml
@@ -1,6 +1,6 @@
 <div class="help_right"><p><span style="font-size: medium;"><strong>Cancel Order</strong></span></p>
     <p>1.How to Cancel an Unpaid Order</p>
-    <p>If your payment for an order hasn't been made, you may cancel it by clicking "Cancel Order" in your account on islambridal.com.</p>
+    <p>If your payment for an order hasn't been made, you may cancel it by clicking "Cancel Order" in your account on isbridals.com.</p>
     <p>If your order is not paid within 40 days, it will be canceled automatically.</p>
     <p>2.How to Cancel a Paid Order</p>
     <p>We understand that ordering an item for your events is an important undertaking, and our cancellation policy was created with this in mind. However, it is important to note that our dresses are made to order. Once the tailoring process has begun, the materials cannot be reused.</p>
