--- a/app/design/frontend/pc/default/template/helpcenter/measurement.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/measurement.phtml
@@ -51,7 +51,7 @@
             How to measure
         </p>
         <dl class="sdl sdl1" style="width: 150px; margin-right: 45px;">
-            <dt><img style="float: none;" title="" alt="" src="http://www.islambridal.com/skin/frontend/pc/default/images/commont/w_jacket_m1.jpg" height="212" width="135"></dt>
+            <dt><img style="float: none;" title="" alt="" src="/skin/frontend/pc/default/images/commont/w_jacket_m1.jpg" height="212" width="135"></dt>
             <dd><b>Bust</b>
                 <p style="padding-top: 0px; padding-left: 0px;">
                     Not your bra size! Take the tape around your back and bring it across the fullest part of your bust.
@@ -59,7 +59,7 @@
             </dd>
         </dl>
         <dl class="sdl" style="width: 150px; margin-right: 45px;">
-            <dt><img style="float: none;" title="" alt="" src="http://www.islambridal.com/skin/frontend/pc/default/images/commont/w_jacket_m2.jpg" height="212" width="134"></dt>
+            <dt><img style="float: none;" title="" alt="" src="/skin/frontend/pc/default/images/commont/w_jacket_m2.jpg" height="212" width="134"></dt>
             <dd><b>Shoulder</b>
                 <p style="padding-top: 0px; padding-left: 0px;">
                     From the edge of the shoulder socket, measure across the back to the same point on the other shoulder.
@@ -67,7 +67,7 @@
             </dd>
         </dl>
         <dl class="sdl" style="width: 150px; margin-right: 45px;">
-            <dt><img style="float: none;" title="" alt="" src="http://www.islambridal.com/skin/frontend/pc/default/images/commont/w_jacket_m3.jpg" height="212" width="134"></dt>
+            <dt><img style="float: none;" title="" alt="" src="/skin/frontend/pc/default/images/commont/w_jacket_m3.jpg" height="212" width="134"></dt>
             <dd><b>Arm Length</b>
                 <p style="padding-top: 0px; padding-left: 0px;">
                     Measure from your shoulder point to the wrist.
@@ -75,7 +75,7 @@
             </dd>
         </dl>
         <dl class="sdl" style="width: 150px; margin-right: 45px;">
-            <dt><img style="float: none;" title="" alt="" src="http://www.islambridal.com/skin/frontend/pc/default/images/commont/w_jacket_m4.jpg" height="212" width="135"></dt>
+            <dt><img style="float: none;" title="" alt="" src="/skin/frontend/pc/default/images/commont/w_jacket_m4.jpg" height="212" width="135"></dt>
             <dd><b>Armscye</b>
                 <p style="padding-top: 0px; padding-left: 0px;">
                     Measure from the top of the shoulder, down the front of the shoulder, under the arm pit, and up the back of the shoulder.
